--- a/index.html
+++ b/index.html
@@ -4,9 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="index.css" rel="stylesheet"/>
     <title>Custom_CheckBox</title>
 </head>
 <body>
-    
+    <div class="main">
+        <div class="inputBox">
+            <input type="checkbox" name="" id="emojiInput"/>
+            <label for="emojiInput" id="emoji">😣</label>
+        </div>
+    </div>
 </body>
 </html>
