--- a/index.html
+++ b/index.html
@@ -14,5 +14,8 @@
             <label for="emojiInput" id="emoji">😣</label>
         </div>
     </div>
+
+
+    <script src="/index.js"></script>
 </body>
 </html>
